apps/rclone/overlays/nishir/deployment.patch.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: rclone
  namespace: shikanime
spec:
  template:
    spec:
      containers:
        - name: rclone-webdav
          volumeMounts:
            - name: data-sukebe
              mountPath: /data/sukebe
        - name: rclone-ftp
          resources:
            requests:
              cpu: 150m
              memory: 64Mi
            limits:
              cpu: 500m
              memory: 128Mi
          volumeMounts:
            - name: data-sukebe
              mountPath: /data/sukebe
      volumes:
        - name: data-sukebe
          persistentVolumeClaim:
            claimName: sukebe-data
