apps/rclone/overlays/nishir/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: rclone
  namespace: shikanime
spec:
  template:
    spec:
      containers:
        - name: rclone-webdav
      volumes:
        - name: cache
          emptyDir:
            sizeLimit: 32Gi
