apps/rclone/overlays/nishir/patch-sts.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: rclone
spec:
  template:
    spec:
      containers:
        - name: rclone-webdav
          volumeMounts:
            - name: data-downloads
              mountPath: /data/downloads
            - name: data-movies
              mountPath: /data/movies
            - name: data-shows
              mountPath: /data/shows
            - name: data-staging
              mountPath: /data/staging
            - name: data-sukebe
              mountPath: /data/sukebe
            - name: data-sync
              mountPath: /data/sync
            - name: data-timeline
              mountPath: /data/timeline
        - name: rclone-ftp
          volumeMounts:
            - name: data-downloads
              mountPath: /data/downloads
            - name: data-movies
              mountPath: /data/movies
            - name: data-shows
              mountPath: /data/shows
            - name: data-staging
              mountPath: /data/staging
            - name: data-sukebe
              mountPath: /data/sukebe
            - name: data-sync
              mountPath: /data/sync
            - name: data-timeline
              mountPath: /data/timeline
      volumes:
        - name: data-downloads
          persistentVolumeClaim:
            claimName: downloads-data
        - name: data-movies
          persistentVolumeClaim:
            claimName: movies-data
        - name: data-shows
          persistentVolumeClaim:
            claimName: shows-data
        - name: data-staging
          persistentVolumeClaim:
            claimName: staging-data
        - name: data-sukebe
          persistentVolumeClaim:
            claimName: sukebe-data
        - name: data-sync
          persistentVolumeClaim:
            claimName: sync-data
        - name: data-timeline
          persistentVolumeClaim:
            claimName: timeline-data
        - name: certs
          configMap:
            name: nishir-ca-certificates.crt
        - name: tls
          secret:
            secretName: rclone-tls
            items:
              - key: tls.crt
                path: tls.crt
              - key: tls.key
                path: tls.key
                mode: 0640
