apps/rclone/overlays/nishir/svc.patch.yaml
apiVersion: v1
kind: Service
metadata:
  name: rclone
  namespace: shikanime
  annotations:
    tailscale.com/hostname: rclone-ftp
    tailscale.com/tags: tag:rclone
