apps/rclone/overlays/nishir/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: rclone
  namespace: shikanime
  annotations:
    tailscale.com/tags: tag:web
spec:
  defaultBackend:
    service:
      name: webdav
      port:
        name: webdav
  ingressClassName: tailscale
  tls:
    - hosts:
        - webdav
